--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -10,7 +10,7 @@ body {
 
 /* General & 'Reset' Stuff */
 
-.container {
+.container.narrow {
   width: 90%;
   max-width: 600px;
   margin: 0 auto;
@@ -46,7 +46,6 @@ header {
 header h1 {
   font-size: 30px;
   line-height: 1.5;
-  margin: 0 0 0 -40px;
   font-weight: bold;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   color: #b5e853;
@@ -58,7 +57,6 @@ header h1 {
 }
 
 header h1:before {
-  content: "./ ";
   font-size: 24px;
 }
 
