--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -3,5 +3,5 @@
 <title>{{page.title}}</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-<link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+<link rel="stylesheet" type="text/css" href="{{site.url}}/stylesheets/stylesheet.css" media="screen">
+<link rel="stylesheet" type="text/css" href="{{site.url}}/stylesheets/github-dark.css" media="screen">
